filtreleme için ProductSpecifications güncellendi